@@ -1,3 +1,8 @@
+Fri Feb 21 15:05:53 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Process_Env_Test.cpp:
+          Use LM_ERROR with ACE_ERROR
+
 Fri Feb 21 10:09:00 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Compiler_Features_33_Test.cpp:
